chore: Basic map added

--- a/client/package.json
+++ b/client/package.json
@@ -28,10 +28,12 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.438.0",
+    "mapbox-gl": "^3.7.0",
     "next": "14.2.6",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
+    "react-map-gl": "^7.1.7",
     "swr": "^2.2.5",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
@@ -39,6 +41,7 @@
     "zustand": "^5.0.0"
   },
   "devDependencies": {
+    "@types/mapbox-gl": "^3.4.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
